--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,22 +7,42 @@ android {
     defaultConfig {
         applicationId "io.harry.seoulfiesta"
         minSdkVersion 19
-        targetSdkVersion 23
+        targetSdkVersion 21
         versionCode 1
         versionName "1.0"
     }
+
+    productFlavors {
+        local {
+
+        }
+        staging {
+
+        }
+    }
+
     buildTypes {
+        debug{
+
+        }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    useLibrary 'org.apache.http.legacy'
 }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:23.2.1'
+    compile 'com.jakewharton:butterknife:7.0.1'
+    compile 'com.squareup.dagger:dagger:+'
+    compile 'com.squareup.retrofit2:retrofit:2.0.0'
+    provided 'com.squareup.dagger:dagger-compiler:+'
 
     testCompile 'junit:junit:4.12'
     testCompile "org.robolectric:robolectric:3.0"
+    testCompile "org.mockito:mockito-core:1.+"
+    testCompile 'org.assertj:assertj-core:1.7.1'
 }
