remove injection code from base activity. create DayOffActivity. add secret login for test. add layout for menu activity. add click handler for requesting day-off. change api path for login. remove constructor(it used only for tests). distinct model and json response model. add gson converter on retrofit. extract common style. create new theme for no action bar. add permissions.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.squareup.dagger:dagger:+'
     compile 'com.squareup.retrofit2:retrofit:2.0.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.0.0'
     provided 'com.squareup.dagger:dagger-compiler:+'
 
     testCompile 'junit:junit:4.12'
