add backend_url by flavors.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,12 +13,9 @@ android {
     }
 
     productFlavors {
-        local {
-
-        }
-        staging {
-
-        }
+        local {}
+        development {}
+        staging {}
     }
 
     buildTypes {
