--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,4 +47,5 @@ dependencies {
     testCompile "org.robolectric:robolectric:3.0"
     testCompile "org.mockito:mockito-core:1.+"
     testCompile 'org.assertj:assertj-core:1.7.1'
+    testCompile 'org.robolectric:shadows-support-v4:3.0'
 }
