--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     compile 'com.squareup.dagger:dagger:+'
     compile 'com.squareup.retrofit2:retrofit:2.0.0'
     compile 'com.squareup.retrofit2:converter-gson:2.0.0'
+    compile 'joda-time:joda-time:2.9.3'
     provided 'com.squareup.dagger:dagger-compiler:+'
 
     testCompile 'junit:junit:4.12'
