--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,6 @@
             </intent-filter>
         </activity>
         <activity android:name=".activity.MenuActivity"/>
-        <activity android:name=".activity.DayOffActivity"/>
+        <activity android:name=".activity.VacationActivity"/>
     </application>
 </manifest>
