create vacation menu activity to choose to see list of vacations or vacation request. create vacation list activity. create vacation list adapter. rename VacationDetailJson with VacationItemJson. create vacation item model. add get vacation method to vacation service but not implemented. extract style of title text view.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     compile 'com.squareup.retrofit2:retrofit:2.0.0'
     compile 'com.squareup.retrofit2:converter-gson:2.0.0'
     compile 'joda-time:joda-time:2.9.3'
+    compile 'com.android.support:recyclerview-v7:23.2.1'
     provided 'com.squareup.dagger:dagger-compiler:+'
 
     testCompile 'junit:junit:4.12'
